[gd_scene load_steps=3 format=3 uid="uid://ch2b8s8i3vek8"]

[ext_resource type="Script" uid="uid://b1vp5onsbbo6l" path="res://scripts/WoodRain.gd" id="1"]
[ext_resource type="Script" uid="uid://dfg6sn0nhqw0e" path="res://scripts/TitleScreen.gd" id="2"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="WoodRain" type="Node2D" parent="."]
script = ExtResource("1")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.3
anchor_right = 0.6
anchor_bottom = 0.35
text = "Start"

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.37
anchor_right = 0.6
anchor_bottom = 0.42
text = "Restart"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.4
anchor_top = 0.44
anchor_right = 0.6
anchor_bottom = 0.49
text = "Quit Game"
